# sharedserver

./: .busted  .crib  .gitignore  .gitmodules  .stylua.toml  CHANGELOG.md  EXAMPLES.md  LICENSE  MACOS_VERIFICATION.md  Makefile  PUBLISHING.md  README.md  _quarto.yml  dist-workspace.toml  flake.nix  index.md
.claude-plugin/: marketplace.json
.github/workflows/: docs-on-change.yml  flake-lock.yml  flakehub.yml  nix.yml  package-crates.yml  publish-crates.yml  publish.yml  release-opencode-plugin.yml  release.yml  rust.yml  stylua.yml  test.yml
docs/: CHANGELOG.md  CLAUDE_CODE.md  DEBUGGING.md  NEOVIM.md  OPENCODE.md  SHELL_WRAPPER_DESIGN.md  example-debug-config.lua
filters/: strip-badges.lua
lua/sharedserver/: health.lua  init.lua
plugins/claude/: README.md
plugins/claude/.claude-plugin/: plugin.json
plugins/claude/examples/: servers.json  sharedserver.json
plugins/claude/hooks/: hooks.json  unuse-servers.sh  use-servers.sh
plugins/opencode/: README.md  package.json  tsconfig.json
plugins/opencode-sharedserver/: README.md  package.json
plugins/opencode/src/: index.ts  sharedserver-resolve.ts
rust/: Cargo.toml
rust/sharedserver-cli/: Cargo.toml
rust/sharedserver-cli/src/: main.rs  output.rs  watcher.rs
rust/sharedserver-cli/src/commands/: check.rs  debug.rs  decref.rs  incref.rs  info.rs  list.rs  mod.rs  start.rs  stop.rs  unuse.rs  use.rs
rust/sharedserver-core/: Cargo.toml
rust/sharedserver-core/src/: lockfile.rs  log.rs  state.rs
rust/src/: lib.rs  main.rs
rust/src/cli/: main.rs  mod.rs  output.rs  watcher.rs
rust/src/cli/commands/: check.rs  debug.rs  decref.rs  doctor.rs  incref.rs  info.rs  kill.rs  list.rs  mod.rs  start.rs  stop.rs  unuse.rs  use.rs
rust/src/core/: duration.rs  health.rs  lockfile.rs  log.rs  mod.rs  state.rs
rust/tests/: integration_tests.rs
rust/tests/test_helpers/: echo_env.sh  immediate_exit.sh  long_running.sh
scripts/: bump-version.sh  check-docs.zsh  release.sh
tests/: MONITORING_TESTS.md  README.md  test-health-check-command.sh  test-health-check.sh  test-monitoring-and-recovery.sh
tests/lua/: test-sharedserver-integration.lua  test_plugin.lua
tests/spec/: sharedserver_spec.lua
tests/test_helpers/: echo_env.sh  ignore_sigterm.sh  immediate_exit.sh  long_running.sh
