[workspace]
members = ["sharedserver-cli", "sharedserver-core"]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2021"
authors = ["SharedServer Contributors"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.27", features = ["fs", "process", "signal"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
